k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: contaapp
  labels:
    app: contaapp
    project: contaapp
