k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: contaapp-frontend
  namespace: contaapp
  labels:
    app: contaapp-frontend
spec:
  selector:
    app: contaapp-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
