k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contaapp-ingress
  namespace: contaapp
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: contaapp.mkstudios.net
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: contaapp-backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: contaapp-frontend
                port:
                  number: 80
